<resources>
    <string name="app_name">Cafydia Diabetes</string>
    <string translatable="false" name="dialog_title_color">#4e5f77</string>
    <string name="send_log_text">Unfortunately Cafydia has stopped. Sending the report you will improve the application for next releases.</string>
    <string name="send_log_button_text">Send report</string>
    <string name="initial_configuration_fragment_units_title">Units</string>
    <string name="initial_configuration_fragment_units_glucose">For glucose</string>
    <string name="initial_configuration_fragment_units_mgdl">mg/dL</string>
    <string name="initial_configuration_fragment_units_mmoll">mmol/L</string>
    <string name="initial_configuration_fragment_units_weight">For weight</string>
    <string name="initial_configuration_fragment_units_grams">Grams</string>
    <string name="initial_configuration_fragment_units_pounds">Pounds</string>
    <string name="initial_configuration_fragment_units_ounces">Ounces</string>
    <string name="initial_configuration_fragment_basal_title">Basal insulin</string>
    <string name="initial_configuration_fragment_basal_breakfast">Dose on breakfast</string>
    <string name="initial_configuration_fragment_basal_lunch">Dose on lunch</string>
    <string name="initial_configuration_fragment_basal_dinner">Dose on dinner</string>
    <string name="initial_configuration_fragment_basal_confirmation">Finished. This reflects the basal doses that I administer to me in the whole day. (If not use basal insulin leave all empty)</string>
    <string name="initial_configuration_fragment_correction_factor_title">Correction factor</string>
    <string name="initial_configuration_fragment_correction_factor_message">Activating this options Cafydia will correct all deviations of the glucose before meals automatically.\n\nIf used, it is a must that in previous step you enter correctly the basal doses you use in order to Cafydia properly calculate your Correction Factor</string>
    <string name="initial_configuration_fragment_correction_factor_activate_above">Activate above correction</string>
    <string name="initial_configuration_fragment_correction_factor_activate_below">Activate below correction</string>
    <string name="initial_configuration_fragment_tutorial_mode_title">Tutorial mode</string>
    <string name="initial_configuration_fragment_tutorial_mode_message">Activated Cafydia starts in tutorial mode where it will be explained each activity in a simple and brief manner. It\'s recommended</string>
    <string name="initial_configuration_fragment_tutorial_mode_activate">Activate</string>
    <string name="initial_configuration_fragment_tutorial_mode_message2">You can reinitialize the Tutorial Mode from the settings menu of Cafydia in every moment</string>
    <string name="main_activity_option_glucose">Add a glucose test</string>
    <string name="main_activity_option_settings">Settings</string>
    <string name="main_activity_option_about">About Cafydia Diabetes</string>
    <string name="main_activity_option_suggestion">We want to hear you!</string>
    <string name="dialog_food_editor_name">Name</string>
    <string name="dialog_food_editor_carbohydrates">Carbohydrate percentage</string>
    <string name="dialog_food_editor_weight_for_unit">Weight per unit (Optional)</string>
    <string name="preference_screen_title_units">Units</string>
    <string name="preference_screen_title_meals">Meals and recommendations</string>
    <string name="preference_screen_title_annotations">Annotations</string>
    <string name="preference_screen_title_labels">Labels</string>
    <string name="preference_category_title_units">Units</string>
    <string name="pref_units_weight_title">For weight</string>
    <string name="pref_units_weight_dialog_title">Choose weight unit</string>
    <string name="pref_units_glucose_title">For glucose tests</string>
    <string name="pref_units_glucose_dialog_title">Choose glucose tests unit</string>
    <string name="pref_glucose_category_title">Glucose test</string>
    <string name="pref_glucose_time_after_meal">Notification after meal</string>
    <string name="pref_correction_factor_title">Correction factor</string>
    <string name="pref_correction_factor_configure">Configure</string>
    <string name="pref_correction_factor_above_activate_title">Correct glucose above</string>
    <string name="pref_correction_factor_below_activate_title">Correct glucose below</string>
    <string name="pref_meal_hours_title">Meal hours</string>
    <string name="pref_meal_hours_choose_minutes_of_range">Choose minutes of range</string>
    <string name="pref_meal_hours_notify_strict_mode_title">Strict mode</string>
    <string name="pref_meal_hours_notify_strict_mode_summary">If the meal is out of range Cafydia Diabetes won\'t permit you to introduce the meal</string>
    <string name="pref_meal_hours_notify_if_correct_meal_hour">Notify in range</string>
    <string name="pref_meal_hours_notify_if_correct_meal_hour_summary">You will be notified of the missing minutes to get to the range, or if you are in it, the minutes remaining until the end</string>
    <string name="pref_meal_hours_notify_ten_minutes_before_limit">Notify hour limit</string>
    <string name="pref_meal_hours_notify_ten_minutes_before_limit_summary">You will be notified ten minutes before a meal will exceed the hour limit of the range</string>
    <string name="pref_automatic_annotations">Automatic annotations</string>
    <string name="pref_automatic_annotations_preprandial_baseline_changes">Preprandial changes</string>
    <string name="pref_automatic_annotations_basal_baseline_changes">Basal changes</string>
    <string name="pref_automatic_annotations_corrective_changes">Corrective changes</string>
    <string name="pref_automatic_annotations_metabolic_rhythm_activation">Metabolic R. activation</string>
    <string name="pref_automatic_annotations_title_default_action">Default action</string>
    <string name="pref_automatic_labels">Automatic labels</string>
    <string name="pref_automatic_labels_summary">This will add a new label in case that isn\'t exists and add the date range of the programmed Metabolic Rhythm being deactivated. This not apply to manual deactivation</string>
    <string name="pref_automatic_labels_title_default_action">Default action</string>
    <string name="pref_advanced_title_category">Advanced options</string>
    <string name="pref_advanced_function_parameters_in_baseline_chart_title">Function parameters</string>
    <string name="pref_advanced_function_parameters_in_baseline_chart_summary">Show function parameters on baseline chart</string>
    <string name="pref_advanced_hide_sections_no_modification_title">Hide sections</string>
    <string name="pref_advanced_hide_sections_no_modification_summary">Hide sections that no offer modification on meals</string>
    <string name="activity_charts_new_element">New element</string>
    <string name="activity_charts_set_data_criteria">Page data criteria</string>
    <string name="activity_charts_delete_chart_page">Delete page</string>
    <string name="activity_charts_move_to_left">Move to left</string>
    <string name="activity_charts_move_to_right">Move to right</string>
    <string name="activity_charts_change_title">Change title</string>
    <string name="button_preference_reset_tutorial_mode_title">Reset in tutorial mode</string>
    <string name="button_preference_reset_tutorial_mode_key">button_preference_reset_tutorial_mode</string>
    <string name="button_preference_reset_tutorial_mode_summary">This reset the app and activate the tutorial mode in Cafydia</string>
</resources>