<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_units_title"
        android:id="@+id/tvTitle"
        android:textColor="#ccc"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_units_glucose"
        android:id="@+id/textView15"
        android:textColor="#ccc"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgGlucose">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_configuration_fragment_units_mgdl"
            android:id="@+id/rbMgDl"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_configuration_fragment_units_mmoll"
            android:id="@+id/rbMmolL" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_units_weight"
        android:id="@+id/textView23"
        android:textColor="#ccc"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgWeight">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_configuration_fragment_units_grams"
            android:id="@+id/rbGrams"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_configuration_fragment_units_pounds"
            android:id="@+id/rbPounds" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_configuration_fragment_units_ounces"
            android:id="@+id/rbOunces" />
    </RadioGroup>
</LinearLayout>