<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain" >

    <!-- Phone, single pane-->

    <item android:id="@+id/glucose"
        android:title="@string/main_activity_option_glucose"
        android:icon="@drawable/ic_glucose_test"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/settings"

        android:title="@string/main_activity_option_settings"
        android:orderInCategory="3"
        android:showAsAction="never"/>
<!--
    <item android:id="@+id/welcome"
        android:title="@string/main_activity_option_welcome"
        android:orderInCategory="4"
        android:showAsAction="never"/>
-->

    <item android:id="@+id/about"
        android:title="@string/main_activity_option_about"
        android:orderInCategory="5"
        android:showAsAction="never"/>

    <item android:id="@+id/suggestion"
        android:title="@string/main_activity_option_suggestion"
        android:orderInCategory="5"
        android:showAsAction="never"/>



</menu>
