<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_tutorial_mode_title"
        android:id="@+id/tvTitle"
        android:textColor="#ccc"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_tutorial_mode_message"
        android:id="@+id/textView30"
        android:layout_marginTop="10dp"
        android:textColor="#ccc" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_tutorial_mode_activate"
        android:id="@+id/cbAboveActivated"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_configuration_fragment_tutorial_mode_message2"
        android:id="@+id/tvMessage2"
        android:layout_marginTop="10dp"
        android:textColor="#ccc" />

</LinearLayout>